--- a/admin.html
+++ b/admin.html
@@ -8,22 +8,21 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css" integrity="sha512-YWzhKL2whUzgiheMoBFwW8CKV4qpHQAEuvilg9FAn5VJUDwKZZxkJNuGM4XkWuk94WCrrwslk8yWNGmY1EduTA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link href="styles/css/style.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
 </head>
 <body>
-    <ul class="nav justify-content-end">
+    <ul class="nav justify-content-end bg-black">
         <li class="nav-item">
           <a href="admin.html" class="nav-link">Sign in/Sign up</a>
         </li>
         <li class="nav-item">
-            <a href="admin.html" class="nav-link active"><i class="fas fa-user"></i></a>
-          </li>
-          <li class="nav-item">
-            <a href="cart.html" class="nav-link"><i class="fas fa-cart-plus" id="cart-icon"></i></a>
-            <div class="cart">
+          <a href="admin.html" class="nav-link"><i class="fas fa-user"></i></a>
+        </li>
+        <li class="nav-item">
+          <a href="cart.html" class="nav-link"><i class="fas fa-cart-plus" id="cart-icon"></i></a>
       </ul>
       <header>
-          
+
         <a href="index.html" class="logo"><img src="images/Skjermbilde 2022-02-02 kl. 14.33.36.png" alt=""></a>
         <nav class="navbar" id="navbar">
            <a href="index.html" class="nav-item">HOME</a>
