--- a/index.html
+++ b/index.html
@@ -1,124 +1,195 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home page</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css" integrity="sha512-YWzhKL2whUzgiheMoBFwW8CKV4qpHQAEuvilg9FAn5VJUDwKZZxkJNuGM4XkWuk94WCrrwslk8yWNGmY1EduTA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Open+Sans:wght@300&display=swap" rel="stylesheet">  
-    <link href="styles/css/style.css" rel="stylesheet">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Home page</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css"
+    integrity="sha512-YWzhKL2whUzgiheMoBFwW8CKV4qpHQAEuvilg9FAn5VJUDwKZZxkJNuGM4XkWuk94WCrrwslk8yWNGmY1EduTA=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Open+Sans:wght@300&display=swap"
+    rel="stylesheet">
+  <link href="css/style.css" rel="stylesheet">
 </head>
+
 <body>
-    <ul class="nav justify-content-end">
-      <li class="nav-item">
-        <a href="admin.html" class="nav-link">Sign in/Sign up</a>
+  <ul class="nav justify-content-end bg-black">
+    <li class="nav-item">
+      <a href="admin.html" class="nav-link">Sign in/Sign up</a>
+    </li>
+    <li class="nav-item">
+      <a href="admin.html" class="nav-link"><i class="fas fa-user"></i></a>
+    </li>
+    <li class="nav-item">
+      <a href="cart.html" class="nav-link"><i class="fas fa-cart-plus" id="cart-icon"></i></a>
+  </ul>
+
+  <header>
+    <a href="#" class="logo"><img src="images/Skjermbilde 2022-02-02 kl. 14.33.36.png" alt=""></a>
+    <div id="hamburger" class="fas fa-bars"></div>
+    <nav class="navbar" id="navbar">
+      <a href="#home" class="nav-item active">HOME</a>
+      <a href="products.html" class="nav-item">PRODUCTS</a>
+      <a href="product-details.html" class="nav-item">PRODUCT DETAILS</a>
+      <form class="d-flex">
+        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+
+      </form>
+    </nav>
+  </header>
+
+  <div class="container-sm">
+    <span class="welcome-text">Welcome</span>
+    <span class="welcome-2">SHOESby<p class="letter">DD</p></span>
+    <div class="hero-banner"></div>
+
+    <section class="product-container">
+      <h2 class="section-title">Feautured Products</h2>
+      <div class="shop-content">
+        <!--Box-1-->
+        <div class="product-box">
+          <img src="" alt="" class="product-img">
+          <h2 class="product-title"></h2>
+          <span class="price"></span>
+          <i class="fas fa-shopping-cart"></i>
+        </div>
+        <!--Box-2-->
+        <div class="product-box">
+          <img src="" alt="" class="product-img">
+          <h2 class="product-title"></h2>
+          <span class="price"></span>
+          <i class="fas fa-shopping-cart"></i>
+        </div>
+        <!--Box-3-->
+        <div class="product-box">
+          <img src="" alt="" class="product-img">
+          <h2 class="product-title"></h2>
+          <span class="price"></span>
+          <i class="fas fa-shopping-cart"></i>
+        </div>
+        <!--Box-4-->
+        <div class="product-box">
+          <img src="" alt="" class="product-img">
+          <h2 class="product-title"></h2>
+          <span class="price"></span>
+          <i class="fas fa-shopping-cart"></i>
+        </div>
+        <!--Box-5-->
+        <div class="product-box">
+          <img src="" alt="" class="product-img">
+          <h2 class="product-title"></h2>
+          <span class="price"></span>
+          <i class="fas fa-shopping-cart"></i>
+        </div>
+        <!--Box-6-->
+        <div class="product-box">
+          <img src="" alt="" class="product-img">
+          <h2 class="product-title"></h2>
+          <span class="price"></span>
+          <i class="fas fa-shopping-cart"></i>
+        </div>
+        <!--Box-7-->
+        <div class="product-box">
+          <img src="" alt="" class="product-img">
+          <h2 class="product-title"></h2>
+          <span class="price"></span>
+          <i class="fas fa-shopping-cart"></i>
+        </div>
+        <!--Box-8-->
+        <div class="product-box">
+          <img src="" alt="" class="product-img">
+          <h2 class="product-title"></h2>
+          <span class="price"></span>
+          <i class="fas fa-shopping-cart"></i>
+        </div>
+      </div>
+    </section>
+    <!-- <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
+      <div class="carousel-indicators">
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
+          aria-current="true" aria-label="Slide 1"></button>
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
+          aria-label="Slide 2"></button>
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
+          aria-label="Slide 3"></button>
+      </div>
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img src="images/Skjermbilde 2022-02-02 kl. 14.33.36.png" class="d-block w-100" alt="...">
+          <div class="carousel-caption d-none d-md-block">
+            <h5>First slide label</h5>
+            <p>Some representative placeholder content for the first slide.</p>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img src="images/Skjermbilde 2022-02-02 kl. 14.33.36.png" class="d-block w-100" alt="...">
+          <div class="carousel-caption d-none d-md-block">
+            <h5>Second slide label</h5>
+            <p>Some representative placeholder content for the second slide.</p>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img src="images/Skjermbilde 2022-02-02 kl. 14.33.36.png" class="d-block w-100" alt="...">
+          <div class="carousel-caption d-none d-md-block">
+            <h5>Third slide label</h5>
+            <p>Some representative placeholder content for the third slide.</p>
+          </div>
+        </div>
+      </div>
+      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
+        data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
+        data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </button>
+    </div> -->
+  </div>
+
+
+
+  <section class="footer">
+    <div class="social">
+      <a href="#"><i class="fab fa-instagram"></i></a>
+      <a href="#"><i class="fab fa-facebook-f"></i></a>
+      <a href="#"><i class="fab fa-linkedin"></i></a>
+    </div>
+    <ul class="list">
+      <li>
+        <a href="#">Home</a>
       </li>
-        <li class="nav-item">
-            <a href="admin.html" class="nav-link"><i class="fas fa-user"></i></a>
-          </li>
-          <li class="nav-item">
-            <a href="cart.html" class="nav-link"><i class="fas fa-cart-plus" id="cart-icon"></i></a>
-            <div class="cart">
-      </ul>
-
-      <header>
-        <a href="#" class="logo"><img src="images/Skjermbilde 2022-02-02 kl. 14.33.36.png" alt=""></a>
-        <div id="hamburger" class="fas fa-bars"></div>
-        <nav class="navbar" id="navbar">
-           <a href="#home" class="nav-item active">HOME</a>
-           <a href="products.html" class="nav-item">PRODUCTS</a>
-           <a href="product-details.html" class="nav-item">PRODUCT DETAILS</a>
-           <form class="d-flex">
-            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-          
-          </form>
-        </nav>
-     </header>
-
-     <div class="container-sm">
-      <span class="welcome-text">Welcome</span>
-      <span class="welcome-2">SHOESby<p class="letter">DD</p></span>
-       <div class="hero-banner"></div>
-
-       <h2 class="section-title">Feautured Products
-
-       </h2>
-       <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
-        <div class="carousel-indicators">
-          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
-          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
-        </div>
-        <div class="carousel-inner">
-          <div class="carousel-item active">
-            <img src="images/Skjermbilde 2022-02-02 kl. 14.33.36.png" class="d-block w-100" alt="...">
-            <div class="carousel-caption d-none d-md-block">
-              <h5>First slide label</h5>
-              <p>Some representative placeholder content for the first slide.</p>
-            </div>
-          </div>
-          <div class="carousel-item">
-            <img src="images/Skjermbilde 2022-02-02 kl. 14.33.36.png" class="d-block w-100" alt="...">
-            <div class="carousel-caption d-none d-md-block">
-              <h5>Second slide label</h5>
-              <p>Some representative placeholder content for the second slide.</p>
-            </div>
-          </div>
-          <div class="carousel-item">
-            <img src="images/Skjermbilde 2022-02-02 kl. 14.33.36.png" class="d-block w-100" alt="...">
-            <div class="carousel-caption d-none d-md-block">
-              <h5>Third slide label</h5>
-              <p>Some representative placeholder content for the third slide.</p>
-            </div>
-          </div>
-        </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Previous</span>
-        </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Next</span>
-        </button>
-      </div>
-      </div>
-   
-
-    
-      <section class="footer">
-        <div class="social">
-            <a href="#"><i class="fab fa-instagram"></i></a>
-            <a href="#"><i class="fab fa-facebook-f"></i></a>
-            <a href="#"><i class="fab fa-linkedin"></i></a>
-        </div>  
-        <ul class="list">
-            <li>
-                <a href="#">Home</a>
-            </li>
-            <li>
-                <a href="#">About</a>
-            </li>
-            <li>
-                <a href="#">Contact</a>
-            </li>
-            <li>
-                <a href="#">Terms</a>
-            </li>
-            <li>
-                <a href="#">Privacy Policy</a>
-            </li>
-        </ul>
-        <p class="copyright">
-            Dejan Dejic @ 2022
-        </p>
-</section>
-<script src="js/index.js" type="module"></script>
-<!-- Bootstrap JavaScript  -->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+      <li>
+        <a href="#">About</a>
+      </li>
+      <li>
+        <a href="#">Contact</a>
+      </li>
+      <li>
+        <a href="#">Terms</a>
+      </li>
+      <li>
+        <a href="#">Privacy Policy</a>
+      </li>
+    </ul>
+    <p class="copyright">
+      Dejan Dejic @ 2022
+    </p>
+  </section>
+  <script src="js/index.js" type="module"></script>
+  <!-- Bootstrap JavaScript  -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+    crossorigin="anonymous"></script>
 </body>
+
 </html>
