--- a/products.html
+++ b/products.html
@@ -8,10 +8,10 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css" integrity="sha512-YWzhKL2whUzgiheMoBFwW8CKV4qpHQAEuvilg9FAn5VJUDwKZZxkJNuGM4XkWuk94WCrrwslk8yWNGmY1EduTA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link href="styles/css/style.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
 </head>
 <body>
-    <ul class="nav justify-content-end">
+    <ul class="nav justify-content-end bg-black">
 
         <li class="nav-item">
           <a href="admin.html" class="nav-link">Sign in/Sign up</a>
@@ -20,8 +20,8 @@
             <a href="admin.html" class="nav-link"><i class="fas fa-user"></i></a>
           </li>
           <li class="nav-item">
-            <a href="" class="nav-link"><i class="fas fa-cart-plus" id="cart-icon"></i></a>
-            <div class="cart">
+            <a href="cart.html" class="nav-link"><i class="fas fa-cart-plus" id="cart-icon"></i></a>
+            <!-- <div class="cart">
               <h3 class="cart-title">Cart</h3>
               <div class="cart-text">
                 <div class="cart-box">
@@ -31,20 +31,16 @@
                     <div class="cart-price">$20</div>
                     <input type="number" value="1" class="cart-quantity">
                   </div>
-                  <!--Remove Products-->
                   <i class="fas fa-trash-alt"></i>
                 </div>
               </div>
-              <!--Price-->
               <div class="total">
                 <div class="total-title">Total</div>
                 <div class="total-price">$0</div>
               </div>
-              <!--Buy-->
               <button type="button" class="btn-buy">Buy now</button>
-              <!--Close-->
               <i class="fas fa-times" id="close-cart"></i>
-            </div>
+            </div> -->
           </li>
       </ul>
       <header>
