--- a/cart.html
+++ b/cart.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Products added to cart- one step away to get your favorite shoes!">
   <title>Cart</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
@@ -32,7 +33,7 @@
   </ul>
 
   <header>
-    <a href="#" class="logo"><img src="images/Skjermbilde 2022-02-02 kl. 14.33.36.png" alt="Logo"></a>
+    <a href="#" class="logo"><img src="images/038f7b4d-87cd-498e-9532-f7ab22cdc31c.PNG" alt="Logo"></a>
     <div id="hamburger" class="fas fa-bars"></div>
     <nav class="navbar" id="navbar">
       <a href="index.html" class="nav-item active">HOME</a>
