--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="The universe of shoes made by ShoesByDD. Nike, K-Swiss and much more">
   <title>Home page</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
@@ -14,8 +15,7 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Open+Sans:wght@300&display=swap"
-    rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Open+Sans:wght@300&display=swap" rel="stylesheet">
   <link href="css/style.css" rel="stylesheet">
 </head>
 
@@ -31,7 +31,7 @@
   </ul>
 
   <header>
-    <a href="#" class="logo"><img src="images/Skjermbilde 2022-02-02 kl. 14.33.36.png" alt="Logo"></a>
+    <a href="#" class="logo"><img src="images/038f7b4d-87cd-498e-9532-f7ab22cdc31c.PNG" alt="Logo"></a>
     <div id="hamburger" class="fas fa-bars"></div>
     <nav class="navbar" id="navbar">
       <a href="#home" class="nav-item active">HOME</a>
@@ -45,7 +45,7 @@
   </header>
 
   <div class="container-sm">
-    <span class="welcome-text">Welcome</span>
+    <span class="welcome-text">Universe Of Shoesh</span>
     <span class="welcome-2">SHOESby<p class="letter">DD</p></span>
     <div class="hero-banner"></div>
 
